--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,9 +6,10 @@ build:
     - name: Run markdown lint
       run: |
         npm install remark-cli remark-preset-lint-consistent vfile-reporter-json
-        npx remark . --use remark-preset-lint-consistent --report vfile-reporter-json 2> remark-lint-report.json
+        npx remark . --use remark-preset-lint-consistent --report vfile-reporter-json > remark-lint-report.json
 
-    - uses: actions/upload-artifact@v4
+    - name: Upload lint report
+      uses: actions/upload-artifact@v4
       with:
         name: remark-lint-report
         path: remark-lint-report.json
