--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,7 +6,7 @@ build:
     - name: Run markdown lint
       run: |
         npm install remark-cli remark-preset-lint-consistent vfile-reporter-json
-        npx remark . --use remark-preset-lint-consistent --report vfile-reporter-json --output remark-lint-report.json
+        npx remark . --use remark-preset-lint-consistent --report vfile-reporter-json 2> remark-lint-report.json
 
     - name: Upload lint report
       uses: actions/upload-artifact@v4
