--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,10 +3,22 @@ build:
   steps:
     - uses: actions/checkout@v4
 
+    - name: Set up Node.js
+      uses: actions/setup-node@v4
+      with:
+        node-version: '20'
+
+    - name: Install dependencies
+      run: |
+        npm init -y  # Ensure package.json exists
+        npm install --save-dev remark-cli remark-preset-lint-consistent vfile-reporter-json
+
     - name: Run markdown lint
       run: |
-        npm install remark-cli remark-preset-lint-consistent vfile-reporter-json
-        npx remark . --use remark-preset-lint-consistent --report vfile-reporter-json 2> remark-lint-report.json
+        npx remark . --use remark-preset-lint-consistent --report vfile-reporter-json > remark-lint-report.json 2>&1 || true
+
+    - name: Check if report file exists
+      run: ls -l remark-lint-report.json
 
     - name: Upload lint report
       uses: actions/upload-artifact@v4
